--- a/index.html
+++ b/index.html
@@ -2,11 +2,118 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/assets/fonts/logo.png" />
+    <link rel="icon" type="image/svg+xml" href="./assets/images/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Investment Solution AG</title>
   </head>
   <body>
-    
+    <header>
+      <img src="./assets/images/logo.svg" alt="Investment Solution AG logotip">
+      <nav>
+        <a href="#about" class="nav-link">ABOUT</a>
+        <a href="#ipo" class="nav-link">IPO</a>
+        <a href="#pre-ipo" class="nav-link">PRE-IPO</a>
+        <a href="#trading" class="nav-link">TRADING</a>
+        <a href="#contacts" class="nav-link">CONTACTS</a>
+      </nav>
+    </header>
+    <section id="about">
+      <h1>OUR INVESTMENT THESIS</h1>
+      <div class="">
+        <p>1. The reliability of a company's brand must be ensured for access to capital, knowledge and success through the use of protocols, networks and platforms.</p>
+        <p>2. Blockchain is changing people's attitude to investing in projects for the better.</p>
+        <p>3. Over the past year, the capitalization of the crypto market has grown 5 times, to the current value of about $ 1.9 trillion.</p>
+        <p>4. The technology of crypto and blockchain gives a positive global economic and social effect.</p>
+        <p>Companies use crypto technologies to speed up business processes, increase transparency and potentially save millions of dollars</p>
+      </div>
+    </section>
+    <section id="ipo">
+      <h2>IPO</h2>
+      <div class="">
+        <p>We monitor and qualify all IPOs for inclusion in our formed investment strategies.</p>
+        <p>The creation of specialized financial instruments for the development of the market is one of the priorities of the venture company. Conducting an IPO on Russian and foreign platforms is a financial instrument that allows launching the stock market for technology companies at mature stages of development.</p>
+      </div>
+      <div class="companies">
+        <div class="companies_item">
+          <img src="./assets/images/atea.png" alt="Atea Pharmaceuticals">
+          <div class="companies_item-description">
+            <h4>Atea Pharmaceuticals</h4>
+            <p>Atea Pharmaceuticals is a leader in the discovery of oral direct-acting antiviral therapies, including our most advanced drug candidate, bemnifosbuvir (AT-527).</p>
+          </div>
+        </div>
+        <div class="companies_item">
+          <img src="./assets/images/bioatla.webp" alt="BCAB BioAtla">
+          <div class="companies_item-description">
+            <h4>BCAB BioAtla</h4>
+            <p>Revolutionizing cancer therapy with Conditionally Active Biologics™</p>
+          </div>
+        </div>
+        <div class="companies_item">
+          <img src="./assets/images/doximity.png" alt="Doximity">
+          <div class="companies_item-description">
+            <h4>Doximity</h4>
+            <p>Doximity is an online networking service for medical professionals. Launched in 2010, the platform offers its members curated medical news, telehealth tools, and case collaboration.</p>
+          </div>
+        </div>
+        <div class="companies_item">
+          <img src="./assets/images/prelude.png" alt="PRLD Prelude Therapeutics">
+          <div class="companies_item-description">
+            <h4>PRLD Prelude Therapeutics</h4>
+            <p>Prelude Therapeutics is a clinical-stage precision oncology company focused on discovering and developing small molecule therapies optimized to target the key drivers of cancer cell growth, resistance, and survival.</p>
+          </div>
+        </div>
+        <div class="companies_item">
+          <img src="./assets/images/upstart.png" alt="Upstart Holdings Inc">
+          <div class="companies_item-description">
+            <h4>Upstart Holdings Inc</h4>
+            <p>Upstart is a leading AI lending platform partnering with banks and credit unions to expand access to affordable credit.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section id="pre-ipo">
+      <h2>PRE-IPO</h2>
+      <div>
+        <p>We give the opportunity to invest in Pre-IPO and try to create an infrastructure that will be as convenient as possible for the client.</p>
+        <p>Private investors who participate in the placement of Pre-IPOs are often large private equity funds or hedge funds. Such funds are ready to buy a large stake in the company. Over the past 10 years, Pre-IPO investments have increased turnover and have become one of the advantages of investment funds.</p>
+      </div>
+      <div>
+        <h3>OUR PROJECTS</h3>
+        <div class="companies">
+          <img src="./assets/images/upgrade.png" alt="upgrade">
+          <img src="./assets/images/just.png" alt="just">
+          <img src="./assets/images/people.png" alt="people.ai">
+        </div>
+      </div>
+    </section>
+    <section id="trading">
+      <h2>QUANTITATIVE TRADING</h2>
+      <div>
+        <p>Quantitative trading is a type of market strategy that relies on mathematical and statistical models to identify and often capture opportunities.</p>
+        <p>Our ML models are based on continuous technical and fundamental analysis and the search for the optimal strategy at the current time.</p>
+        <p>We also analyze news through Natural Language Processing in collaboration with Dow Jones news to make appropriate decisions to automate orders.</p>
+        <p>Our robot can manage any number of accounts at the same time. Those who wish can connect their demo account to SAXO bank to check how it works.</p>
+      </div>
+    </section>
+    <section id="contacts">
+      <div>
+        <h4>Contacts</h4>
+        <a href="mailto:offers@invest-sol.com">offers@invest-sol.com</a>
+        <p>Gotthardstrasse 26, 6300 Zug, Switzerland</p>
+      </div>
+      <div class="map_container">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2712.2320691059695!2d8.509580576870684!3d47.17289271782582!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x479aaa5f4c168d1f%3A0xfea13b935696ac81!2zR290dGhhcmRzdHJhc3NlIDI2LCA2MzAwIFp1Zywg0KjQstC10LnRhtCw0YDQuNGP!5e0!3m2!1sru!2sru!4v1738246126530!5m2!1sru!2sru" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      </div>
+    </section>
+    <footer>
+      <nav>
+        <a href="#about" class="nav-link">ABOUT</a> 
+        <a href="#ipo" class="nav-link">IPO</a>
+        <a href="#pre-ipo" class="nav-link">PRE-IPO</a>
+        <a href="#trading" class="nav-link">TRADING</a>
+        <a href="#contacts" class="nav-link">CONTACTS</a>
+      </nav>
+      <p>©2025 Invest Solutions. All Rights Reserved.</p>
+    </footer>
   </body>
 </html>
